src/test/deca/context/valid/ClassMathode8.deca
// Description:
//    symple class avec methode void
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022
class A {
    int a;
	void A() {
        a=a*a;
	}

}