src/test/deca/context/invalid/classmethode23.deca
class A{
    int a;
    void getA(int a){
        return a;
    }
}
